--- a/src/photoapp/templates/kontakt.html
+++ b/src/photoapp/templates/kontakt.html
@@ -42,19 +42,44 @@
       .jumbotron{
       	border-radius: 10px;
       	text-align: center;
-      	width: 670px;
+      	width: 60%;
       	margin: auto;
       	margin-top: 3%;
       }
 
       .forma{
-      	width:450px;
+      	width:auto;
       	margin: auto;
       }
 
       .logo{
         	margin-top: -9px;
         }
+
+      .naaav{
+          font-size: 20px;
+        }
+
+      .dropdown{
+          font-size: 20px;
+        }
+
+      .active{
+        font-size: 20px;
+      }
+
+
+       @media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
+      .jumbotron{
+      border-radius: 10px;
+      text-align: center;
+      width: auto;
+      margin: auto;
+      margin-top: 3%;
+      margin-left: 2%;
+      }
+
+      }
 
 
       {% endblock %}
@@ -74,14 +99,18 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="/about_me">O mnie</a></li>
-            <li class="active"><a href="/contact">Kontakt</a></li>
+            <li class="naaav"><a href="/o_mnie">O mnie</a></li>
+            <li class="active"><a href="/kontakt">Kontakt</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fotografia<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/photologue/gallery/">Najnowsze galerie</a></li>
-                <li><a href="/photologue/gallerylist/">Wszystkie galerii</a></li>
                 <li><a href="/photologue/photolist/">Wszystkie zdjęcia</a></li>
+                <li><a href="/sesje_ciazowe/">Sesje ciążowe</a></li>
+                <li><a href="/sesje_rodzinne/">Sesje rodzinne</a></li>
+                <li><a href="/sesje_noworodkowe/">Sesje noworodkowe</a></li>
+                <li><a href="/sesje_okazjonalne/">Sesje okazjonalne</a></li>
+                <li><a href="/projekt_360/"><b>Mój projekt 365</b></a></li>
               </ul>
             </li>
           </ul>
@@ -92,6 +121,9 @@
 
 
 {% block cont %}
+<div class="container">
+<div class="row">
+<div class="col-md-12">
     <div class="jumbotron">
     	
 					  <form method="POST" action=''>
@@ -116,6 +148,9 @@
             			{% endfor %}
         			{% endif %}
 		
+	</div>
+	</div>
+	</div>
 	</div>
 	<br>
 {% endblock %}
