--- a/src/photoapp/templates/o_mnie.html
+++ b/src/photoapp/templates/o_mnie.html
@@ -12,27 +12,27 @@
         background-attachment: fixed;
         background-size: cover;
         min-height: 100%;
-        width: 98%;
+        
        }
 
 
       img.msg{
-      	position: fixed;
-      	margin-left: 310px;
-      	margin-top: -580px;
+        position: fixed;
+        margin-left: 310px;
+        margin-top: -580px;
       }
-
-
       img.fb{
         position: fixed;
         margin-left: 310px;
         margin-top: -500px;
       }
 
+      
+
       img.smile{
         position: fixed;
-        margin-left: -560px;
-        margin-top: -130px;
+        margin-left: 0px;
+        margin-top: -200px;
       }
 
 
@@ -41,26 +41,64 @@
       }
 
       .jumbotron{
-      	border-radius: 10px;
-      	text-align: center;
-      	width: 670px;
-      	margin: auto;
-      	margin-top: 3%;
+      border-radius: 10px;
+      text-align: center;
+      width: 60%;
+      margin: auto;
+      margin-top: 3%;
       }
 
       h4{
-        width: 425px;
+        max-width: 75%;
         margin: auto;
         line-height: 36px;
       }
 
-      hr{
-        width: 70%;
-      }
 
       .logo{
           margin-top: -9px;
         }
+
+      .naaav{
+          font-size: 20px;
+        }
+
+      .dropdown{
+          font-size: 20px;
+        }
+      .active{
+        font-size: 20px;
+      }
+
+      @media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
+      .jumbotron{
+      border-radius: 10px;
+      text-align: center;
+      width: auto;
+      margin: auto;
+      margin-top: 3%;
+      }
+
+      img.smile{
+        margin-left: 30px;
+        margin-top: -10px;
+      }
+
+      img.msg{
+        position: static;
+        margin-left: 0px;
+        margin-top: 0px;
+      }
+
+
+      img.fb{
+        position: static;
+        margin-left: 0%;
+        margin-top: 0px;
+      }
+      }
+
+      
 
 
       {% endblock %}
@@ -80,14 +118,18 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active" ><a href="#about">O mnie</a></li>
-            <li><a href="/contact">Kontakt</a></li>
+            <li class="active" ><a href="/o_mnie">O mnie</a></li>
+            <li class="naaav"><a href="/kontakt">Kontakt</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fotografia<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/photologue/gallery/">Najnowsze galerie</a></li>
-                <li><a href="/photologue/gallerylist/">Wszystkie galerii</a></li>
                 <li><a href="/photologue/photolist/">Wszystkie zdjęcia</a></li>
+                <li><a href="/sesje_ciazowe/">Sesje ciążowe</a></li>
+                <li><a href="/sesje_rodzinne/">Sesje rodzinne</a></li>
+                <li><a href="/sesje_noworodkowe/">Sesje noworodkowe</a></li>
+                <li><a href="/sesje_okazjonalne/">Sesje okazjonalne</a></li>
+                <li><a href="/projekt_360/"><b>Mój projekt 365</b></a></li>
               </ul>
             </li>
           </ul>
@@ -98,20 +140,28 @@
 
 
 {% block cont %}
+<div class="container">
+<div class="row">
+<div class="col-md-12">
     <div class="jumbotron">
     	
-
+              <div class="caption">
 					    <h2><b>Witaj na mojej stronie ! </b><br></h2><hr>
 					    	<h4>
                     Jestem jedną z tych mam, które po narodzinach swojego dziecka odkryły fotograficzną pasję.<br> Na początku było to zwykłe upamiętnianie ważnych i pięknych chwil, które z czasem przerodziło się w stan „nie mogę żyć bez aparatu”.<br> <br><b>Fotografowanie sprawia mi wiele radości.</b> Zwłaszcza, gdy udaje mi się zatrzymać w kadrze to coś, co czyni go wyjątkowym – <i>emocje, nastrój, uczucia…</i> 
                     <b>Jeżeli i Ty pragniesz mieć taką fotograficzną pamiątkę - zapraszam do kontaktu. </b>
                     Sesje organizuję w wybranym przez Was lub przeze mnie plenerze lub w Waszym domu. <br> <br>
-                    <b><span style="margin-left:255px;">Zapraszam, Celina</span></b>.<br><br>
-                </h4>
-                <a href="/contact"><img class="msg" src= "{% static "img/msg1.png" %}" onmouseover= "this.src= '{% static "img/msg2.png" %}' " onmouseout= "this.src= '{% static "img/msg1.png" %}'" /></a>
+                    <b>Zapraszam, Celina</b>.<br><br>
+                    <a href="/kontakt"><img class="msg" src= "{% static "img/msg1.png" %}" onmouseover= "this.src= '{% static "img/msg2.png" %}' " onmouseout= "this.src= '{% static "img/msg1.png" %}'" /></a>
                 <a href="https://www.facebook.com/celina.krzyzkowska" target="_blank"><img class="fb" src= "{% static "img/fb1.png" %}" onmouseover= "this.src= '{% static "img/fb2.png" %}' " onmouseout= "this.src= '{% static "img/fb1.png" %}'" /></a>
-                <img class="smile" src= {% static "img/smile.png" %} alt="smile">
-		
+                </h4>
+                
+                </div>
+      </div>
+      <img class="smile" src= {% static "img/smile.png" %} alt="smile">
+      </div>
+
+		</div>
 	</div>
-	<br>
+
 {% endblock %}
